--- a/src/PlanIt/BudgetBundle/Resources/views/Page/pdf.html.twig
+++ b/src/PlanIt/BudgetBundle/Resources/views/Page/pdf.html.twig
@@ -9,12 +9,12 @@
 			<table class="table table-bordered table-condensed table-body-center" >
 				<thead>
 					<tr>
-						<th>Article</th>
-						<th>Quantité</th>
-						<th>En stock</th>
-						<th>A acheter</th>
-						<th>Prix unitaire</th>
-						<th>Prix total</th>
+						<th>{{'item'|trans}}</th>
+						<th>{'quantity'|trans}}</th>
+						<th>{{'stock'|trans}}</th>
+						<th>{{'to_buy'|trans}}</th>
+						<th>{{'unit_price'|trans}}</th>
+						<th>{{'total'|trans}}</th>
 					</tr>
 				</thead>
 				
