--- a/src/PlanIt/EventBundle/Resources/views/Page/form.html.twig
+++ b/src/PlanIt/EventBundle/Resources/views/Page/form.html.twig
@@ -3,7 +3,7 @@
     {{ form_widget(form) }}
 
     <p>
-        <input type="submit" value="Ajouter">
+        <input type="submit" value="{{'add'|trans}}">
     </p>
 </form>
 <script>
