--- a/src/PlanIt/GuestsBundle/Resources/views/Guest/form-answer.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/Guest/form-answer.html.twig
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet"  type="text/css" href="/css/inscription.css">
-    <title>Réponse</title>
+    <title>{{'answer'|trans}}</title>
     <meta name="description" content="">
   </head>
 <body>
-		<header><h1>Réponse à l'invitation</h1></header>
+		<header><h1>{{'answer_invitation'|trans}}</h1></header>
 
 	<div id="content">
 		<form id="form-post-guest" action="/app_dev.php/api/guests/{{guest.id}}/answers" method="post" {{ form_enctype(form) }} class="blogger">
 	    {{ form_widget(form) }}
 		    <p>
-		        <input type="submit" value="Valider">
+		        <input type="submit" value="{{'validate'|trans}}">
 		    </p>
 		</form>
 	</div>
