--- a/src/PlanIt/GuestsBundle/Resources/views/Guest/form.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/Guest/form.html.twig
@@ -5,10 +5,10 @@
             <div class="modal-content">
                 <div class="modal-header">
                 <button id="close-modal" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
-                <h4 class="modal-title" id="myModalLabel">Ajouter un invité</h4>
+                <h4 class="modal-title" id="myModalLabel">{{'add_guest'|trans}}</h4>
                 </div>
                 <div class="modal-body">
-                    <span> Attention : Le nombre maximum d'inscrits est atteint </span>
+                    <span> {{'max_guests'|trans}}</span>
                 </div>
             </div>
       </div>
@@ -19,14 +19,14 @@
             <div class="modal-content">
                 <div class="modal-header">
                 <button id="close-modal" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
-                <h4 class="modal-title" id="myModalLabel">Ajouter un invité</h4>
+                <h4 class="modal-title" id="myModalLabel">{{'add_guest'|trans}}</h4>
                 </div>
                 <div class="modal-body">
                     <form id="form-post-guest" action="" method="post" {{ form_enctype(form) }} class="blogger">
                         {{ form_widget(form) }}
 
 				    <p>
-				        <input type="submit" value="Ajouter">
+				        <input type="submit" value="{{'add'|trans}}">
 				    </p>
                     </form>
                 </div>
