--- a/src/PlanIt/PlaceBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/PlaceBundle/Resources/views/Page/index.html.twig
@@ -14,7 +14,7 @@
 	<section>
 
 	<div class="row">
-        <div class="col-md-3 bt_place"><button data-toggle="modal" data-target=".addPlaceModal" class="col-md-3">Ajouter un lieu</button></div>
+        <div class="col-md-3 bt_place"><button data-toggle="modal" data-target=".addPlaceModal" class="col-md-3">{{'add_place'|trans}}</button></div>
     </div>
 
 	<div class="row list" id="list">
@@ -31,22 +31,22 @@
 		    <div class="labels row">
 		    	<div class="col-lg-3 col-md-12 col-sm-12 img_place"> </div>
 		    	<div class="col-lg-4 col-md-6 col-sm-12" id="infos">
-		        	<p><span class="label_descr">Adresse</span> : <input type="text" id="address-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.address}}"></p>
-		        	<p><span class="label_descr">Capacité</span> : <input type="text" id="capacity-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.capacity}}"></p>
-		        	<p><span class="label_descr">Distance</span> : <input type="text" id="distance-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.distance}}">km</p>
-		        	<p><span class="label_descr">Téléphone</span> : <input type="text" id="tel-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.tel}}"></p>
-		        	<p><span class="label_descr">Site</span> : <input type="text" id="website-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.website}}"> </p>
-		        	<p><span class="label_descr">Remarque</span> : <input type="text" id="remark-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.remark}}"> </p>
-		        	<p><span class="label_descr">Etat</span> : 
+		        	<p><span class="label_descr">{{'address'|trans}}</span> : <input type="text" id="address-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.address}}"></p>
+		        	<p><span class="label_descr">{{'capacity'|trans}}</span> : <input type="text" id="capacity-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.capacity}}"></p>
+		        	<p><span class="label_descr">{{'distance'|trans}}</span> : <input type="text" id="distance-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.distance}}">km</p>
+		        	<p><span class="label_descr">{{'tel'|trans}}</span> : <input type="text" id="tel-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.tel}}"></p>
+		        	<p><span class="label_descr">{{'website'|trans}}</span> : <input type="text" id="website-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.website}}"> </p>
+		        	<p><span class="label_descr">{{'remark'|trans}}</span> : <input type="text" id="remark-place-{{place.id}}" onblur="updatePlace({{place.id}})" value="{{place.remark}}"> </p>
+		        	<p><span class="label_descr">{{'state'|trans}}</span> : 
 		        		<select id="state-place-{{place.id}}" onchange="updatePlace({{place.id}})">
-		        			<option value="0" {% if place.state == 0 %} selected {% endif %}>Refusé</option>
-		        			<option value="2" {% if place.state == 2 %} selected {% endif %}>Contacté</option>
-		        			<option value="1" {% if place.state == 1 %} selected {% endif %}>Accepté</option>
+		        			<option value="0" {% if place.state == 0 %} selected {% endif %}>{{'refused'|trans}}</option>
+		        			<option value="2" {% if place.state == 2 %} selected {% endif %}>{{'contacted'|trans}}</option>
+		        			<option value="1" {% if place.state == 1 %} selected {% endif %}>{{'accepted'|trans}}</option>
 		        		</select>
 		        	</p>
-		        	<p><span class="label_descr">Contrat</span> : {{place.contract}}
+		        	<p><span class="label_descr">{{'contract'|trans}}</span> : {{place.contract}}
 		                <div class="bt_place">
-		                    <button data-toggle="modal" data-target=".updateContractModal" data-id="{{place.id}}">Modifier le contrat</button> 
+		                    <button data-toggle="modal" data-target=".updateContractModal" data-id="{{place.id}}">{{'update_contract'|trans}}</button> 
 		                </div>
 		        	</p>
 		    	</div>
