--- a/src/PlanIt/PlaceBundle/Resources/views/Place/contract-form.html.twig
+++ b/src/PlanIt/PlaceBundle/Resources/views/Place/contract-form.html.twig
@@ -3,14 +3,14 @@
         <div class="modal-content">
             <div class="modal-header">
             <button id="close-modal" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
-            <h4 class="modal-title" id="myModalLabel">Modifier le un contrat</h4>
+            <h4 class="modal-title" id="myModalLabel">{{'update_contract'|trans}}</h4>
             </div>
             <div class="modal-body">
                 <form id="form-post-contract" action="" method="post" {{ form_enctype(form) }} class="blogger">
                     {{ form_widget(form) }}
 
 			    <p>
-			        <input type="submit" value="Ajouter">
+			        <input type="submit" value="{{'update'|trans}}">
 			    </p>
                 </form>
             </div>
