--- a/src/PlanIt/TodoBundle/Resources/views/Item/form.html.twig
+++ b/src/PlanIt/TodoBundle/Resources/views/Item/form.html.twig
@@ -3,14 +3,14 @@
         <div class="modal-content">
             <div class="modal-header">
             <button id="close-modal" type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
-            <h4 class="modal-title" id="myModalLabel">Ajouter une tâche</h4>
+            <h4 class="modal-title" id="myModalLabel">{{'add_task'|trans}}</h4>
             </div>
             <div class="modal-body">
                 <form id="form-post-guest" action="/app_dev.php/api/items/{{module_id}}" method="post" {{ form_enctype(form) }} class="blogger">
                     {{ form_widget(form) }}
 
 			    <p>
-			        <input type="submit" value="Ajouter">
+			        <input type="submit" value="{{'add'|trans}}">
 			    </p>
                 </form>
             </div>
