--- a/src/PlanIt/TodoBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/TodoBundle/Resources/views/Page/index.html.twig
@@ -11,8 +11,8 @@
 	</div>
 
 	<div class="row buttons">
-        <div class="col-md-3 bt_todo"><button data-toggle="modal" data-target=".addItemModal">Ajouter une tâche</button></div>
-        <div class="col-md-3 bt_todo"><a href="{{ path('PlanItTodoBundle_pdf', { 'module_id': module.id }) }}">Imprimer la liste des tâches</a></div>
+        <div class="col-md-3 bt_todo"><button data-toggle="modal" data-target=".addItemModal">{{'add_task'|trans}}</button></div>
+        <div class="col-md-3 bt_todo"><a href="{{ path('PlanItTodoBundle_pdf', { 'module_id': module.id }) }}">{{'print'|trans}}</a></div>
 
         <!--<div class="col-md-3 bt_todo"><button>Valider</button></div>-->
     </div>
