--- a/src/PlanIt/BudgetBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/BudgetBundle/Resources/views/Page/index.html.twig
@@ -11,9 +11,11 @@
 	</div>
 
 	<div class="row buttons">
-		<div class="col-md-3 col-sm-3 col-xs-12 bt_budget"><button id="bouton_depense">Ajouter une dépense</button></div>
-		<div class="col-md-3 col-sm-3 col-xs-12 bt_budget"><button id="bouton_ajout">Ajouter un apport</button></div>
-		<div class="col-md-3 col-sm-3 col-xs-12 bt_budget"><a href="/app_dev.php/pdf/{{module_id}}"><button>Imprimer la liste des courses</button></a></div>
+		<div class="col-md-3 col-sm-3 col-xs-12 bt_budget"><button id="bouton_depense" data-toggle="modal" data-target=".addTypeExpenseModal" data-type="0" data-id="{{module.id}}">Ajouter une dépense</button></div>
+		<div class="col-md-3 col-sm-3 col-xs-12 bt_budget"><button id="bouton_ajout" data-toggle="modal" data-target=".addInflowModal" data-type="1" data-id="{{module.id}}">Ajouter un apport</button></div>
+		<div class="col-md-3 col-sm-3 col-xs-12 bt_budget"><a href="{{ path('PlanItBudgetBundle_pdf', { 'module_id': module.id }) }}"><button>Imprimer la liste de courses</button></a></div>
+
+
 	</div>
 	
 	<section>			
@@ -54,13 +56,11 @@
 						<section id="section-topline-general">
 							<div class="section-topline">
 								<div class="col-md-4"> 
-									<div class="pie_chart" id="pie_chart_depenses"></div>
-									<div class="bt_budget"><button id="bouton_depense" data-toggle="modal" data-target=".addTypeExpenseModal" data-type="0" data-id="{{module.id}}">Ajouter une dépense</button></div>
+									<div class="pie_chart" id="pie_chart_depenses"></div>									
 								</div>
 
 								<div class="col-md-4"> 
 									<div class="pie_chart" id="pie_chart_apports"></div>
-									<div class="bt_budget"><button id="bouton_ajout" data-toggle="modal" data-target=".addInflowModal" data-type="1" data-id="{{module.id}}">Ajouter un apport</button></div>
 								</div>
 
 								<div class="col-md-4" id="infos"> 
@@ -161,7 +161,7 @@
 									</tbody>
 								</table>
 								<span id="legend"> * Données modifiables. Cliquez pour modifier.</span>
-								<div class="col-md-2 pull-right add-expense"><button data-toggle="modal" data-target=".addInflowModal">Ajouter un apport</button></div>
+								 <!-- <div class="col-md-2 pull-right add-expense"><button data-toggle="modal" data-target=".addInflowModal">Ajouter un apport</button></div>  -->
 								
 							</div>
 						</section>
