--- a/src/PlanIt/EventBundle/Resources/public/css/event.scss
+++ b/src/PlanIt/EventBundle/Resources/public/css/event.scss
@@ -53,7 +53,7 @@
 	background: $neutral url("/images/event/info_dte_budget.png") no-repeat;
 	background-position: 100% -112px;
 	color: #5c5a5a;
-	margin-top: 80px;
+	/*margin-top: 80px;*/
 	&.positif {
 		background-color: $positive;
 		background-position: 100% -223px;
